data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_765.wast
;; 6. **Test Description**:    Place numerous `nop` instructions between `br_table` targets and ensure all index values are valid. This examines the resilience against potential masking of target boundaries by `nop`.      **Specific Constraint**: Effects of intervening `nop` on index validation.      **Edge Case**: Multiple `nop` between targets.

(assert_invalid
  (module
    (func $test_br_table
      (block $label0
        (block $label1
          (block $label2
            (br_table $label0 $label1 $label2
              (nop) (nop) (i32.const 0) (nop) (i32.const 1) (nop) (nop) (i32.const 2)
            )
          )
        )
      )
    )
  )
  "invalid index in br_table"
)